[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Font/kenvector_future_thin.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://PauseScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="PauseScreen" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.258824, 0.215686, 0.215686, 0.513726 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 335.0
margin_top = 126.0
margin_right = 473.0
margin_bottom = 162.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 327.0
margin_top = 242.0
margin_right = 489.0
margin_bottom = 376.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryResumeButton" type="Button" parent="VBoxContainer"]
margin_right = 162.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "Resume"

[node name="HomeButton" type="Button" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 162.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 1 )
text = "Go Home"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 162.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 1 )
text = "Exit"
[connection signal="pressed" from="VBoxContainer/RetryResumeButton" to="." method="_on_RetryResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
